# esp32_cam_mecanum

./: README.md
ESP32_CAM/: .cproject  .gitignore  .project  CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
ESP32_CAM/components/cjson/: CMakeLists.txt
ESP32_CAM/components/lwpkt/: CMakeLists.txt
ESP32_CAM/components/lwpkt/src/include/lwpkt/: lwpkt_opt.h
ESP32_CAM/components/lwpkt/src/lwpkt/: lwpkt.c
ESP32_CAM/components/lwrb/: CMakeLists.txt
ESP32_CAM/main/: CMakeLists.txt  Kconfig.projbuild  backup_Kconfig  camera.c  http_server.c  idf_component.yml  main.c  rover_communication.c
ESP32_CAM/main/inc/: camera.h  connectivity.h  connectivity_private.h  http_server.h  rover_communication.h
ESP32_CAM/main/src/: ap_connectivity.c  camera.c  connectivity_private.c  eap_connectivity.c  http_server.c  rover_communication.c  sta_connectivity.c
